TestSuite/Syntax/Errors/BarLabelMode-1.tjp
project simple "Simple Project" "$Id" 2000-01-01 - 2000-01-04

htmltaskreport "BarLabelMode-1.html" {
	columns name, daily, weekly, monthly
	barlabels "empty"
}

